--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -11,3 +11,4 @@
 @import "modules/_section-main";
 @import "modules/_section-buy";
 @import "modules/_section-advertising";
+@import "modules/_section-shop";
