--- a/#src/scss/layout/_extra.scss
+++ b/#src/scss/layout/_extra.scss
@@ -1,9 +1,10 @@
 .general-head {
     padding-top: 25px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 
     @media (min-width: 992px) {
         padding-top: 60px;
+        padding-bottom: 25px;
     }
 
     &__title {
@@ -38,6 +39,49 @@
 
         &:hover {
             color: #363636;
+        }
+    }
+}
+
+.general-swiper-slide {
+    @media (min-width: 992px) {
+        flex-shrink: 1 !important;
+        width: 25% !important;
+    }
+}
+
+.general-pagination {
+    display: flex;
+    justify-content: flex-end;
+    border-radius: 5px;
+    margin-top: 15px;
+
+    @media(min-width: 992px) {
+        display: none;
+    }
+
+    &__btn {
+        padding: 5px;
+        display: flex;
+        justify-content: center;
+        background: #FAFAFA;
+        cursor: pointer;
+
+        &:first-child {
+            margin-right: 2px;
+        }
+
+        &:last-child {
+            margin-left: 2px;
+        }
+
+        &--icon {
+            width: 10px;
+            height: 15px;
+        }
+
+        &--icon_prev {
+            transform: rotate(180deg);
         }
     }
 }
