--- a/#src/scss/layout/_extra.scss
+++ b/#src/scss/layout/_extra.scss
@@ -60,6 +60,12 @@
         display: none;
     }
 
+    &_d-flex {
+        @media(min-width: 992px) {
+            display: flex;
+        }
+    }
+
     &__btn {
         padding: 5px;
         display: flex;
