--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -8,7 +8,10 @@
 
 // Page styles
 @import "modules/_header";
+@import "modules/_footer";
 @import "modules/_section-main";
 @import "modules/_section-buy";
 @import "modules/_section-advertising";
 @import "modules/_section-shop";
+@import "modules/_section-partners";
+@import "modules/_page-everything";
