--- a/#src/scss/modules/_header.scss
+++ b/#src/scss/modules/_header.scss
@@ -290,21 +290,12 @@
     }
 }
 
-// .general-content {
-//     padding: 100px 0px 0px 0px;
+.general-content {
+    padding: 80px 0px 0px 0px;
+}
 
-//     &__text {
-//         font-size: 18px;
-//         line-height: 25px;
-//     }
-
-//     &__text p {
-//         margin: 0px 0px 20px 0px;
-//     }
-// }
-
-// @media (max-width:992px) {
-//     .general-content {
-//         padding: 70px 0px 0px 0px;
-//     }
-// }
+@media (max-width:992px) {
+    .general-content {
+        padding: 50px 0px 0px 0px;
+    }
+}
