--- a/#src/scss/modules/_section-partners.scss
+++ b/#src/scss/modules/_section-partners.scss
@@ -84,9 +84,10 @@
     }
 
     &__photo-img {
-        max-width: 100%;
+        width: 100%;
         height: auto;
         display: block;
         margin: 0 auto;
+        border-radius: 8px;
     }
 }
