--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -19,3 +19,4 @@
 @import "modules/_archive-hookah";
 @import "modules/_archive-shop";
 @import "modules/_archive-products";
+@import "modules/_archive-all";
