--- a/#src/scss/layout/_extra-archive.scss
+++ b/#src/scss/layout/_extra-archive.scss
@@ -217,6 +217,9 @@
         border-radius: 5px;
         width: 100%;
         padding: 3px 20px 3px 5px;
+        font-weight: normal;
+        font-size: 12px;
+        color: #909198;
 
         &::placeholder {
             font-weight: normal;
