--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -4,6 +4,7 @@
 
 // Layout
 @import "layout/_extra-archive";
+@import "layout/_extra-single";
 @import "layout/_extra";
 @import "layout/_general";
 
@@ -20,3 +21,4 @@
 @import "modules/_archive-shop";
 @import "modules/_archive-products";
 @import "modules/_archive-all";
+@import "modules/_single-product";
