Add last changes

--- a/#src/scss/modules/_single-product.scss
+++ b/#src/scss/modules/_single-product.scss
@@ -184,10 +184,10 @@
 }
 
 /* skin 1 */
-.skin-1 .product-quantity__wrapper {
-    float: left;
-    width: 94px;
-}
+// .skin-1 .product-quantity__wrapper {
+//     float: left;
+//     width: 94px;
+// }
 
 .skin-1 .product-quantity__wrapper span {
     display: block;
