--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -22,3 +22,4 @@
 @import "modules/_archive-products";
 @import "modules/_archive-all";
 @import "modules/_single-product";
+@import "modules/_personal-account";
