--- a/#src/scss/layout/_extra.scss
+++ b/#src/scss/layout/_extra.scss
@@ -150,3 +150,68 @@
         }
     }
 }
+
+.select-hidden {
+    display: none;
+    visibility: hidden;
+}
+
+.custom-select {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    font-size: 16px;
+}
+
+.custom-select__header {
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    position: relative;
+    width: 100%;
+    height: 35px;
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 0 30px 0 15px;
+
+    &::after {
+        display: inline-block;
+        content: "";
+        border-top: 7px solid #CDCDCD;
+        border-right: 7px solid transparent;
+        border-bottom: 0;
+        border-left: 7px solid transparent;
+        position: absolute;
+        top: 50%;
+        right: 5px;
+        transform: translateY(-50%);
+    }
+}
+
+.select-options {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    left: 0;
+    z-index: 999;
+    margin: 0;
+    list-style: none;
+    box-shadow: 0px 0px 10px -5px #000000;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 5px 0;
+
+    li {
+        padding: 5px 10px;
+        display: block;
+        font-weight: 500;
+        border-bottom: 1px solid #F7F7F5;
+        transition: 0.5s all ease;
+
+        &:last-child {
+            border-bottom: none;
+        }
+
+        &:hover {}
+    }
+}
