--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -4,6 +4,7 @@
 
 // Layout
 @import "layout/_extra-archive";
+@import "layout/_extra-registration";
 @import "layout/_extra-single";
 @import "layout/_extra";
 @import "layout/_general";
@@ -23,3 +24,5 @@
 @import "modules/_archive-all";
 @import "modules/_single-product";
 @import "modules/_personal-account";
+@import "modules/_customer-trade-send";
+@import "modules/_registration-type";
