--- a/#src/scss/layout/_extra.scss
+++ b/#src/scss/layout/_extra.scss
@@ -164,54 +164,132 @@
 }
 
 .custom-select__header {
-    font-weight: 500;
-    letter-spacing: 0.03em;
     position: relative;
     width: 100%;
-    height: 35px;
     cursor: pointer;
-    border-radius: 5px;
-    padding: 0 30px 0 15px;
+    padding: 10px 5px;
+    border-bottom: 2px solid #F8F8F8;
+    font-weight: normal;
+    font-size: 16px;
+    letter-spacing: 0.01em;
+    color: #909198;
 
     &::after {
         display: inline-block;
         content: "";
-        border-top: 7px solid #CDCDCD;
+        border-top: 7px solid #E5E9EB;
         border-right: 7px solid transparent;
         border-bottom: 0;
         border-left: 7px solid transparent;
         position: absolute;
-        top: 50%;
-        right: 5px;
-        transform: translateY(-50%);
+        right: 0;
+        top: 35%;
+        transform: rotate(180deg);
     }
+
+    &::before {
+        display: inline-block;
+        content: "";
+        border-top: 7px solid #E5E9EB;
+        border-right: 7px solid transparent;
+        border-bottom: 0;
+        border-left: 7px solid transparent;
+        position: absolute;
+        right: 0;
+        top: 65%;
+    }
+
+
 }
 
 .select-options {
     display: none;
     position: absolute;
-    top: 100%;
+    top: 115%;
     right: 0;
     left: 0;
     z-index: 999;
     margin: 0;
     list-style: none;
-    box-shadow: 0px 0px 10px -5px #000000;
-    border-radius: 5px;
+    border: 2px solid #F8F8F8;
+    // box-shadow: 0px 0px 10px -5px #000000;
+    // border-radius: 5px;
     background-color: #fff;
     padding: 5px 0;
 
     li {
         padding: 5px 10px;
         display: block;
-        font-weight: 500;
         border-bottom: 1px solid #F7F7F5;
         transition: 0.5s all ease;
+        font-weight: normal;
+        font-size: 16px;
+        letter-spacing: 0.01em;
+        color: #909198;
 
         &:last-child {
             border-bottom: none;
         }
 
-        &:hover {}
+        &:hover {
+            color: #16B0A7;
+        }
     }
+}
+
+.custom-radio {
+
+    &__link {
+        font-weight: normal;
+        font-size: 20px;
+        letter-spacing: 0.02em;
+        color: #363636;
+        margin-left: 7px;
+        text-decoration: underline;
+        transition: all .5s;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+
+/* для элемента input c type="radio" */
+.custom-radio>input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+/* для элемента label связанного с .custom-radio */
+.custom-radio>span {
+    align-items: center;
+    user-select: none;
+    font-weight: normal;
+    font-size: 20px;
+    letter-spacing: 0.02em;
+    color: #363636;
+}
+
+/* создание в label псевдоэлемента  before со следующими стилями */
+.custom-radio>span::before {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 3px solid #909198;
+    background-color: #909198;
+    border-radius: 50%;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50% 50%;
+}
+
+/* стили для радиокнопки, находящейся в состоянии checked */
+.custom-radio>input:checked+span::before {
+    background-color: #fff;
+    // background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
