--- a/#src/scss/layout/_extra.scss
+++ b/#src/scss/layout/_extra.scss
@@ -241,12 +241,20 @@
 
     &__link {
         font-weight: normal;
-        font-size: 20px;
+        font-size: 16px;
         letter-spacing: 0.02em;
         color: #363636;
         margin-left: 7px;
         text-decoration: underline;
         transition: all .5s;
+
+        @media (min-width: 768px) {
+            font-size: 18px;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 20px;
+        }
 
         &:hover {
             text-decoration: none;
@@ -266,9 +274,17 @@
     align-items: center;
     user-select: none;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 16px;
     letter-spacing: 0.02em;
     color: #363636;
+
+    @media (min-width: 768px) {
+        font-size: 18px;
+    }
+
+    @media (min-width: 992px) {
+        font-size: 20px;
+    }
 }
 
 /* создание в label псевдоэлемента  before со следующими стилями */
@@ -292,4 +308,18 @@
 .custom-radio>input:checked+span::before {
     background-color: #fff;
     // background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+}
+
+.btn {
+    font-weight: normal;
+    font-size: 16px;
+    letter-spacing: 0.01em;
+    color: #909198;
+    background: #fff;
+    cursor: pointer;
+    transition: all .5s;
+
+    &:hover {
+        color: #363636;
+    }
 }
