--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -4,6 +4,7 @@
 
 // Layout
 @import "layout/_extra-archive";
+@import "layout/_extra-category";
 @import "layout/_extra-registration";
 @import "layout/_extra-single";
 @import "layout/_extra";
@@ -26,3 +27,4 @@
 @import "modules/_personal-account";
 @import "modules/_customer-trade-send";
 @import "modules/_registration-type";
+@import "modules/_registration-info";
