--- a/#src/scss/modules/_single-product.scss
+++ b/#src/scss/modules/_single-product.scss
@@ -183,11 +183,6 @@
     }
 }
 
-/* skin 1 */
-// .skin-1 .product-quantity__wrapper {
-//     float: left;
-//     width: 94px;
-// }
 
 .skin-1 .product-quantity__wrapper span {
     display: block;
@@ -208,7 +203,7 @@
     float: left;
     width: 26px;
     height: 33px;
-    border: 1px solid #FAFAFA;
+    border: 1px solid #eaebef;
     text-align: center;
     padding: 0;
 
