--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "layout/_extra-category";
 @import "layout/_extra-registration";
 @import "layout/_extra-single";
+@import "layout/_extra-adverticing";
 @import "layout/_extra-hookah-page";
 @import "layout/_extra";
 @import "layout/_general";
@@ -26,6 +27,7 @@
 @import "modules/_archive-all";
 @import "modules/_archive-customers";
 @import "modules/_single-product";
+@import "modules/_single-customer";
 @import "modules/_personal-account";
 @import "modules/_customer-trade-send";
 @import "modules/_registration-type";
