--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "layout/_extra-single";
 @import "layout/_extra-adverticing";
 @import "layout/_extra-hookah-page";
+@import "layout/_extra-user-hookah";
 @import "layout/_extra";
 @import "layout/_general";
 
